# surface-control

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
etc/sysusers/: surface-control.conf
etc/udev/: 40-surface-control.rules
pkg/arch/: PKGBUILD
pkg/deb/: .gitignore  makedeb
pkg/deb/debian/: changelog  control  rules
pkg/fedora/: surface-control.spec
src/: cli.rs  dgpu.rs  error.rs  latch.rs  main.rs
src/cli/: dgpu.rs  dtx.rs  mod.rs  perf.rs  profile.rs  status.rs
src/sys/: dgpu.rs  dtx.rs  latch.rs  mod.rs  pci.rs  perf.rs  profile.rs
systemd/: surface-rapl.service  surface-rapl.sh
