[package]
name = "surface"
version = "0.4.6"
authors = ["Maximilian Luz <luzmaximilian@gmail.com>"]
description = "Control various aspects of Microsoft Surface devices on Linux from the Command-Line"

repository = "https://github.com/linux-surface/surface-control"
readme = "README.md"
license = "MIT"

edition = "2018"
build = "build.rs"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ['cargo'] }
indoc = "2.0.4"
nix = "0.28.0"
sdtx = { git = "https://github.com/linux-surface/libsurfacedtx", tag = "v0.1.4" }
serde = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.58"
udev = "0.8.0"

[build-dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ['cargo'] }
clap_complete = "4.5.1"
indoc = "2.0.4"
nix = "0.28.0"
sdtx = { git = "https://github.com/linux-surface/libsurfacedtx", tag = "v0.1.4" }
serde = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.58"
udev = "0.8.0"

[profile.release]
lto = true
codegen-units = 1
