[package]
name = "surface"
version = "0.4.7"
authors = ["Maximilian Luz <luzmaximilian@gmail.com>"]
description = "Control various aspects of Microsoft Surface devices on Linux from the Command-Line"

repository = "https://github.com/linux-surface/surface-control"
readme = "README.md"
license = "MIT"

edition = "2018"
build = "build.rs"

[dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ['cargo'] }
indoc = "2.0.5"
nix = "0.29.0"
sdtx = { git = "https://github.com/linux-surface/libsurfacedtx", tag = "v0.1.5" }
serde = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.63"
udev = "0.9.0"

[build-dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ['cargo'] }
clap_complete = "4.5.26"
indoc = "2.0.5"
nix = "0.29.0"
sdtx = { git = "https://github.com/linux-surface/libsurfacedtx", tag = "v0.1.5" }
serde = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.63"
udev = "0.9.0"

[profile.release]
lto = true
codegen-units = 1
