[package]
name = "surface"
version = "0.4.10"
authors = ["Maximilian Luz <luzmaximilian@gmail.com>"]
description = "Control various aspects of Microsoft Surface devices on Linux from the Command-Line"

repository = "https://github.com/linux-surface/surface-control"
readme = "README.md"
license = "MIT"

edition = "2018"
build = "build.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ['cargo'] }
indoc = "2.0.6"
nix = "0.30.0"
sdtx = { git = "https://github.com/linux-surface/libsurfacedtx", tag = "v0.1.7" }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
udev = "0.9.3"

[build-dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ['cargo'] }
clap_complete = "4.5.47"
indoc = "2.0.6"
nix = "0.30.0"
sdtx = { git = "https://github.com/linux-surface/libsurfacedtx", tag = "v0.1.7" }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
udev = "0.9.3"

[profile.release]
lto = true
codegen-units = 1
